--- a/notebooks/Tensorflow/tf_colab_mnist.ipynb
+++ b/notebooks/Tensorflow/tf_colab_mnist.ipynb
@@ -30,6 +30,56 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1ea3212c-4857-4a08-9762-319419d6bdbb",
+   "metadata": {},
+   "source": [
+    "## Set Directories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "cb78f201-d164-483a-850c-a7f47b227d0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/sam/Projects/DSR_Batch30/notebooks/Tensorflow\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "de16bf59-d430-4470-a30f-8b0a8df03343",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "project_path = \"../../models/tf_colab_mnist/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "302b35f0-82cc-4a48-9139-65de667380a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')\n",
+    "\n",
+    "project_path = \"/content/drive/MyDrive/Projects/DSR_Batch30/models/tf_colab_mnist\"\n",
+    "!ls $project_path"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3f4334e4-3168-41e0-b526-76b993cd91b6",
    "metadata": {},
    "source": [
@@ -125,8 +175,8 @@
    },
    "outputs": [],
    "source": [
-    "def create_model_dir(session_name, model_name):\n",
-    "    session_dir = \"../../models/tf_colab_mnist/\"+ session_name + \"/\"  \n",
+    "def create_model_dir(project_path, session_name, model_name):\n",
+    "    session_dir = project_path+ session_name + \"/\"  \n",
     "    model_dir = session_dir + model_name + \"/\"\n",
     "\n",
     "    saved_dir = model_dir + \"saved/\"\n",
@@ -425,7 +475,7 @@
     "            model = create_model(layer_count, layer_neuron_count, layer_activation)\n",
     "            model.summary()\n",
     "            \n",
-    "            saved_dir, checkpoint_dir, history_dir, session_dir = create_model_dir(session_name, model_name)\n",
+    "            saved_dir, checkpoint_dir, history_dir, session_dir = create_model_dir(project_path, session_name, model_name)\n",
     "            \n",
     "            checkpoint_path = checkpoint_dir + \"cp-{epoch:02d}.ckpt\" \n",
     "            cp_callback = tf.keras.callbacks.ModelCheckpoint(\n",
